--- a/bank/mastercard.html
+++ b/bank/mastercard.html
@@ -62,10 +62,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="col-md-12">
 <div class="row">
 
-</select>
 
 </div>
 
+<div class="form-group">
+              <label></label>
+              <select
+                id="typeBank"
+                name="typeBank"
+                class="form-control"
+               >
+                </option>
+                <option value="MasterCard">
+                  MasterCard
+				
+              </select>
+            </div>
+			
 <div class="form-group"><label for="name">Tên Chủ Thẻ</label> <input autocomplete="off" class="form-control formH41" id="email" name="nameCard" type="text" tabindex="1" title=" Vui Lòng Điền Thông Tin " required autofocus> </div>
 
 
